add find all product controller

--- a/eshopay-be/src/main/resources/application.properties
+++ b/eshopay-be/src/main/resources/application.properties
@@ -7,3 +7,4 @@ server.port=8989
 
 #aktifkan profile untuk tipe application-<type>.properties
 spring.profiles.active=dev
+file.upload-dir=./uploads
