--- a/eshopay-be/src/main/resources/application.properties
+++ b/eshopay-be/src/main/resources/application.properties
@@ -8,3 +8,7 @@ server.port=8989
 #aktifkan profile untuk tipe application-<type>.properties
 spring.profiles.active=dev
 file.upload-dir=./uploads
+
+spring.servlet.multipart.enabled=true
+spring.mvc.contentnegotiation.favor-parameter=true
+spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
