add search and pagination

--- a/eshopay-be/src/main/resources/application.properties
+++ b/eshopay-be/src/main/resources/application.properties
@@ -12,3 +12,6 @@ file.upload-dir=./uploads
 spring.servlet.multipart.enabled=true
 spring.mvc.contentnegotiation.favor-parameter=true
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
+
+
+app.endpoint-file-view=http://localhost:8989/api/product/view/
